--- a/clicktocal/Gemfile
+++ b/clicktocal/Gemfile
@@ -27,6 +27,10 @@ gem 'simple_form', '~> 3.0.2'
 
 gem 'ip', '~> 0.3.1'
 
+gem 'human_attribute', '~> 0.2.0'
+
+gem 'actionview-encoded_mail_to', '~> 1.0.4'
+
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
 
