--- a/clicktocal/Gemfile
+++ b/clicktocal/Gemfile
@@ -34,6 +34,10 @@ gem 'actionview-encoded_mail_to', '~> 1.0.4'
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
 
+group :development, :test do
+  gem 'rspec-rails', '~> 3.0.0'
+end
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
