--- a/clicktocal/test/fixtures/register_numbers.yml
+++ b/clicktocal/test/fixtures/register_numbers.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  ip: 1.5
-  ddd: MyString
-  number: 1.5
+admin:
+  ip: 192.168.266.01
+  ddd: 62
+  number:  92.9299999999996
   carried_out: false
 
-two:
-  ip: 1.5
-  ddd: MyString
+author:
+  ip: 277.365.8544
+  ddd: 64
   number: 1.5
-  carried_out: false
+  carried_out: true
