--- a/clicktocal/config/database.yml
+++ b/clicktocal/config/database.yml
@@ -2,13 +2,13 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: userclick
-  password: 123456
+  username: root
+  password: 
   socket: /var/run/mysqld/mysqld.sock
-  host: 192.168.1.242
+#  host: 192.168.1.242
 development:
   <<: *default
-  database: clicktocall
+  database: clicktocal_development
 
 
 
