--- a/clicktocal/Gemfile
+++ b/clicktocal/Gemfile
@@ -12,7 +12,8 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0',          group: :doc
 
 gem 'simple_form', '~> 3.0.2'
-
+gem 'dotenv-rails', :require => 'dotenv/rails-now'
+gem "recaptcha", require: "recaptcha/rails"
 gem 'twitter-bootstrap-rails', '~> 3.2.0'
 
 gem 'ip', '~> 0.3.1'
